Added new words

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             Improv Sweden Calendar
         </div>
         <div class="cta-buttons">
-            <button id="randomWordButton" onclick="showRandomWord()" style="background-color:#4f46e5; display: none;">Show Me
+            <button id="randomWordButton" onclick="showRandomWord()" style="background-color:#4f46e5;">Show Me
                 A Random Word</button>
             <button onclick="togglePopup()" style="background-color:#0d9488">Add Event</button>
         </div>
