Added more pages

--- a/terms-user.html
+++ b/terms-user.html
@@ -9,15 +9,15 @@
         content="Explore improv shows in Sweden. View events by city, add your own, and get inspired.">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Användarvillkor - Improv Sweden Calendar">
-    <meta property="og:description" content="Regler för att posta evenemang på Improv Sweden Calendar">
+    <meta property="og:title" content="Användarvillkor - Improkalendern">
+    <meta property="og:description" content="Regler för att posta evenemang på Improkalendern">
     <meta property="og:image" content="logo.jpg">
     <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with your actual URL -->
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Improv Sweden Calendar">
+    <meta name="twitter:title" content="Improkalendern">
     <meta name="twitter:description" content="Discover improv shows across Sweden with ease.">
     <meta name="twitter:image" content="logo.jpg">
 
@@ -25,7 +25,7 @@
     <link rel="icon" href="images/logo.jpg" type="image/jpeg">
 
     <!-- Title -->
-    <title>Användarvillkor - Improv Sweden Calendar</title>
+    <title>Användarvillkor - Improkalendern</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
     <!-- Styling -->
@@ -39,7 +39,7 @@
             <div class="logo">
                 <img src="images/logo.jpg" alt="Improv Sweden Logo"
                     style="height: 40px; width: 40px; border-radius: 9999px; margin-right: 0.5rem; vertical-align: middle;">
-                Improv Sweden Calendar
+                Improkalendern
             </div>
         </a>
         <div class="cta-buttons">
@@ -154,7 +154,7 @@
                 <a href="terms-user.html"
                     style="margin: 0 1rem; text-decoration: none; color: #666; font-weight: bold;">Användarvillkor</a>
                 <a href="terms.html" style="margin: 0 1rem; text-decoration: none; color: #666;">Användarregler</a>
-                <a href="about.html" style="margin: 0 1rem; text-decoration: none; color: #666;">About</a>
+                <a href="about.html" style="margin: 0 1rem; text-decoration: none; color: #666;">Om</a>
             </nav>
             <!-- <p style="margin-top: 1rem;">&copy; 2025 YourSiteName. All rights reserved.</p> -->
         </footer>
