--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Explore improv shows in Sweden. View events by city, add your own, and get inspired.">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Improv Sweden Calendar">
+    <meta property="og:title" content="Improkalendern">
     <meta property="og:description" content="Find and share improv events happening across Sweden.">
     <meta property="og:image" content="logo.jpg">
     <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with your actual URL -->
@@ -17,7 +17,7 @@
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Improv Sweden Calendar">
+    <meta name="twitter:title" content="Improkalendern">
     <meta name="twitter:description" content="Discover improv shows across Sweden with ease.">
     <meta name="twitter:image" content="logo.jpg">
 
@@ -25,7 +25,7 @@
     <link rel="icon" href="images/logo.jpg" type="image/jpeg">
 
     <!-- Title -->
-    <title>Improv Sweden Calendar</title>
+    <title>Improkalendern</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
     <!-- Styling -->
@@ -38,7 +38,7 @@
         <div class="logo">
             <img src="images/logo.jpg" alt="Improv Sweden Logo"
                 style="height: 40px; width: 40px; border-radius: 50%; object-fit: cover; vertical-align: middle; margin-right: 0.5rem;">
-            Improv Sweden Calendar
+            Improkalendern
         </div>
         <div class="cta-buttons">
             <button id="randomWordButton" onclick="showRandomWord()" style="background-color:#4f46e5;">Ge mig ett
@@ -71,7 +71,7 @@
                 <a href="terms-user.html"
                     style="margin: 0 1rem; text-decoration: none; color: #666;">Användarvillkor</a>
                 <a href="terms.html" style="margin: 0 1rem; text-decoration: none; color: #666;">Användarregler</a>
-                <a href="about.html" style="margin: 0 1rem; text-decoration: none; color: #666;">About</a>
+                <a href="about.html" style="margin: 0 1rem; text-decoration: none; color: #666;">Om</a>
             </nav>
             <!-- <p style="margin-top: 1rem;">&copy; 2025 YourSiteName. All rights reserved.</p> -->
         </footer>
