--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
     <!-- Title -->
     <title>Om Improkalendern - Improkalendern</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <!-- Styling -->
     <link rel="stylesheet" href="style.css">
@@ -101,6 +102,10 @@
                 <a href="terms.html" style="margin: 0 1rem; text-decoration: none; color: #666;">Användarregler</a>
                 <a href="about.html"
                     style="margin: 0 1rem; text-decoration: none; color: #666; font-weight: bold;">Om</a>
+                <a href="https://www.instagram.com/improkalendern" target="_blank"
+                    style="margin-left: 1rem; color: #666; font-size: 20px;">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </nav>
             <!-- <p style="margin-top: 1rem;">&copy; 2025 YourSiteName. All rights reserved.</p> -->
         </footer>
