--- a/terms.html
+++ b/terms.html
@@ -46,7 +46,7 @@
         <div class="cta-buttons">
             <button id="randomWordButton" onclick="showRandomWord()" style="background-color:#4f46e5;">Ge mig ett
                 slumpmässigt ord</button>
-            <button onclick="togglePopup()" style="background-color:#0d9488">Lägg till en show</button>
+            <button onclick="togglePopup()" style="background-color:#0d9488">Lägg till ett impro-event</button>
         </div>
     </nav>
 
