Updated Meta Tags

--- a/terms.html
+++ b/terms.html
@@ -6,19 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Explore improv shows in Sweden. View events by city, add your own, and get inspired.">
+        content="Utforska improvisationer i Sverige. Se evenemang efter stad, lägg till dina egna och bli inspirerad.">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Användarregler - Improkalendern">
     <meta property="og:description" content="Regler för att posta evenemang på Improkalendern">
     <meta property="og:image" content="logo.jpg">
-    <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with your actual URL -->
+    <meta property="og:url" content="https://improkalendern.se"> 
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Improkalendern">
-    <meta name="twitter:description" content="Discover improv shows across Sweden with ease.">
+    <meta name="twitter:description" content="Upptäck improvisationer över hela Sverige med lätthet.">
     <meta name="twitter:image" content="logo.jpg">
 
     <!-- Favicon -->
