Updated Meta Tags

--- a/terms.html
+++ b/terms.html
@@ -11,7 +11,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Användarregler - Improkalendern">
     <meta property="og:description" content="Regler för att posta evenemang på Improkalendern">
-    <meta property="og:image" content="logo.jpg">
+    <meta property="og:image" content="images/logo.jpg">
     <meta property="og:url" content="https://improkalendern.se"> 
     <meta property="og:type" content="website">
 
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Improkalendern">
     <meta name="twitter:description" content="Upptäck improvisationer över hela Sverige med lätthet.">
-    <meta name="twitter:image" content="logo.jpg">
+    <meta name="twitter:image" content="images/logo.jpg">
 
     <!-- Favicon -->
     <link rel="icon" href="images/logo.jpg" type="image/jpeg">
