Updated Meta Tags

--- a/terms-user.html
+++ b/terms-user.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Utforska improvisationer i Sverige. Se evenemang efter stad, lägg till dina egna och bli inspirerad.">
+        content="Upptäck improvisationsteater i Sverige! Improkalendern samlar föreställningar, impro comedy, jams & workshops i Stockholm, Göteborg och fler städer. Lägg in ditt impro-evenemang gratis!">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Användarvillkor - Improkalendern">
